[package]
name = "monteflake"
description = "Configurable bitwidth snowflake id generator, encoder, decoder"
license = "MIT"
repository = "https://github.com/bfrog/monteflake"
version = "0.1.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
keywords = ["snowflake", "flake", "id"]

[dependencies]
